[package]
name = "retro_filter"
version = "0.1.0"
authors = ["Michael Ebert-Hanke <michael@ebert-hanke.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.2.4"
fltk-theme = "0.2.2"
image = "0.23.14"
imageproc = "0.22.0"

# [lib]
# name = "retro_filter_lib"
# path = "src/lib.rs"

# [[bin]]
# name = "retro_filter"
# path ="src/bin/main.rs"
