[package]
name = "retro_filter"
version = "0.0.1"
authors = ["Michael Ebert-Hanke <michael@ebert-hanke.de>"]
repository = "https://gitlab.com/ebert-hanke/retrofilter"
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
fltk = "^1.2"
fltk-theme = "0.4"
image = "0.23.14"
imageproc = "0.22.0"
palette = "0.6"
rand = "0.8.4"
rayon = "1.5.1"
